# CDET_EPSI

./: docker-compose.yml
fastapi-backend/: Dockerfile  main.py  pyproject.toml
fastapi-backend/tests/: test_main.py
vite-project/: Dockerfile
