[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.20",
    "fastapi>=0.135.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "kafka-python>=2.0.6",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
